scode/Gmamcoders/prob21/error.txt
  File "/var/www/html/scode/Gmamcoders/prob21/main.py", line 9
    for i in range(n)
                     ^
SyntaxError: expected ':'
